--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 body{  
-      height: 100vh;
+    height: 100vh;
     background:linear-gradient(160deg, #0F3661, #0F3661 40%, white 40%, white);
+}
+.hide{
+    /* transition: 2s !important; */
+    display: none !important;
 }
 .img{
     display: flex;
@@ -117,4 +121,47 @@ input, textarea{
 }
 textarea{
     min-height: 100px;
+}
+.flex{
+    position: relative;
+}
+.toast{
+    animation-name: animate;
+    animation-duration: 2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    color: white;
+    padding: 10px 10px 10px 50px;
+    border-radius: 50px 0px 0px 50px;
+}
+.toast-out{
+    animation-name: toast-out;
+    transition: 2s;
+}
+@keyframes toast-out{
+    0%{
+        right: 0px;
+
+    }
+    100%{
+        right: -1000px;
+    }
+}
+@keyframes animate{
+    0%{
+        right: -1000px;
+
+    }
+    25%{
+        right: 0px;
+    }
+}
+.toast i{
+    padding: 5px 15px;
+    cursor: pointer;
 }
