--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -44,6 +44,7 @@
             position: relative;
         }
         .toast{
+            margin: 2px;
             animation-name: animate;
             animation-duration: 1s;
             /* z-index: 1; */
@@ -51,7 +52,6 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: red;
             position: relative;
             top: 0px;
             /* left: 0px; */
@@ -69,6 +69,7 @@
         
             }
             100%{
+                opacity: 0%;
                 top: -100px;
             }
         }
