--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,12 @@ body{
 .red{
     color: red;
 }
+.danger{
+    background-color: red;
+}
+.green{
+    background-color: rgb(65, 170, 32);
+}
 .flex{
     display: flex;
     justify-content: center;
@@ -69,6 +75,7 @@ input, textarea{
     border-radius: 5px;
     border: 1px solid grey;
 }
+
 .flexbox {
     padding: 10px;
   flex: 1;
@@ -129,12 +136,12 @@ textarea{
     position: relative;
 }
 .toast{
+    margin: 2px;
     animation-name: animate;
     animation-duration: 2s;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -151,7 +158,11 @@ textarea{
         right: 0px;
 
     }
+    50%{
+        opacity: 10%;
+    }
     100%{
+        opacity: 0%;
         right: -1000px;
     }
 }
